"""
    SPDX-FileCopyrightText: Copyright 2022-2025 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "color",
    srcs = ["color.cpp"],
    hdrs = ["color.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//core:namespace",
        "//math:util",
        "@fmt",
    ],
)

cc_test(
    name = "color_test",
    size = "small",
    srcs = [
        "color_test.cpp",
    ],
    deps = [
        "//imaging:color",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "color_converter",
    hdrs = ["color_converter.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":color",
        "//core:namespace",
        "//math:vector",
    ],
)

cc_test(
    name = "color_converter_test",
    srcs = ["color_converter_test.cpp"],
    deps = [
        ":color_converter",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "image",
    hdrs = ["image.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":color",
        "//math:point",
        "//math:vector",
    ],
)

cc_test(
    name = "image_test",
    size = "small",
    srcs = [
        "image_test.cpp",
    ],
    deps = [
        "//imaging/io",
        "@googletest//:gtest_main",
    ],
)
