"""
    This file is part of Flatland, a simple 2D ray tracer

    Copyright (c) 2020, Julian Amann (dev@vertexwahn.de), All rights reserved.
    Distributed under the 3-Clause BSD License software license, see the accompanying
    file LICENSE.md or https://opensource.org/licenses/BSD-3-Clause.
"""

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

cc_binary(
    name = "flatland",
    srcs = ["main.cpp"],
    data = ["//scenes"],
    visibility = ["//visibility:public"],
    deps = [
        "//srcs:flatland",
        "@tclap",
    ],
)

pkg_tar(
    name = "deploy_flatland",
    srcs = [
        ":flatland",
    ],
    extension = "tar.gz",
)
