"""
    This file is part of Flatland, a simple 2D ray tracer

    Copyright (c) 2020, Julian Amann (dev@vertexwahn.de), All rights reserved.
    Distributed under the 3-Clause BSD License software license, see the accompanying
    file LICENSE.md or https://opensource.org/licenses/BSD-3-Clause.
"""

sh_test(
    name = "acceptance_test",
    timeout = "short",
    srcs = ["test_render_scenes.sh"],
    data = [
        "//scenes",
        "//scenes:reference_images",
        "//srcs/flatland.cli:flatland",
    ],
    tags = ["manuall"],
)
