"""
    This file is part of Flatland, a simple 2D ray tracer

    Copyright (c) 2020, Julian Amann (dev@vertexwahn.de), All rights reserved.
    Distributed under the 3-Clause BSD License software license, see the accompanying
    file LICENSE.md or https://opensource.org/licenses/BSD-3-Clause.
"""

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "TestSceneFiles",
    srcs = [
        "bunny.flatland.yaml",
        "disks.flatland.xml",
        "integrator_missing.flatland.xml",
        "property.test.flatland.xml",
        "scene_tag_missing.flatland.xml",
    ],
)
