"""
    SPDX-FileCopyrightText: Copyright 2022-2023 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "fresnel",
    srcs = ["fresnel.h"],
    deps = [
        "//core:namespace",
        "//math:vector",
    ],
)

cc_test(
    name = "fresnel_test",
    size = "small",
    srcs = [
        "fresnel_test.cpp",
    ],
    deps = [
        ":fresnel",
        "//math:normal",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "property_set",
    hdrs = [
        "property_set.h",
        "property_set_formatter.h",
    ],
    deps = [
        "//core:object",
        "//core:property_set",
        "//core:reference_counted",
        "//imaging:color",
        "//math:point",
        "//math:transform",
    ],
)

cc_test(
    name = "property_set_test",
    size = "small",
    srcs = [
        "property_set_test.cpp",
    ],
    deps = [
        ":property_set",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "property_set_formatter_test",
    size = "small",
    srcs = [
        "property_set_formatter_test.cpp",
    ],
    deps = [
        ":property_set",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "rendering",
    srcs = [
        "rendering.cpp",
        "rendering.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//flatland/rendering:property_set",
        "//flatland/rendering/scene:load_scene",
    ],
)

cc_library(
    name = "sampler",
    hdrs = ["sampler.h"],
    deps = [
        "//core:object",
        "//flatland/rendering:property_set",
        "//math:point",
        "@pcg",
    ],
)

cc_test(
    name = "sampler_test",
    size = "small",
    srcs = [
        "sampler_test.cpp",
    ],
    deps = [
        ":sampler",
        "@googletest//:gtest_main",
        "@hypothesis",
    ],
)
